@@ -1,3 +1,7 @@
+2016-02-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* Health status icons for device reachability
+
 2016-02-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* NEWS: Torrus Release 2.09
